add_executable(DB
        Compaction.h
        Version.cc
        Config.h
        VersionSet.cc
        FileMetaData.h
        FileUtils.h
        DB.cc
        LogWriter.cc
        CacheStrategy.cc
        SSTableCache.cc
        SSTable.cc
        TableFormat.cc
        BlockReader.cc
        SSTableBuilder.cc
        FilterStrategy.cc
        Block.cc)